# before-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  checks.yml  test.yml
before_commit/: __init__.py  __main__.py  clientlib.py  color.py  config.py  constants.py  error_handler.py  git.py  hook.py  logging_handler.py  main.py  repository.py  staged_files_only.py  store.py  util.py  xargs.py
before_commit/commands/: autoupdate.py  clean.py  gc.py  hook_impl.py  init_templatedir.py  install_uninstall.py  migrate_config.py  run.py  try_repo.py  validate_config.py  validate_manifest.py
before_commit/languages/: all.py  conda.py  coursier.py  dart.py  docker.py  docker_image.py  dotnet.py  fail.py  golang.py  helpers.py  lua.py  node.py  perl.py  pygrep.py  python.py  r.py  ruby.py  rust.py  script.py  swift.py  system.py
before_commit/meta_hooks/: check_hooks_apply.py  check_useless_excludes.py
before_commit/resources/: hook-tmpl
pre_commit/: clientlib.py  constants.py  error_handler.py  logging_handler.py  main.py  repository.py  staged_files_only.py  store.py  util.py  xargs.py
pre_commit/commands/: autoupdate.py  clean.py  gc.py  hook_impl.py  install_uninstall.py  run.py  try_repo.py
pre_commit/languages/: dart.py  docker.py  docker_image.py  dotnet.py  golang.py  helpers.py  lua.py  node.py  pygrep.py  python.py  ruby.py  rust.py  swift.py
pre_commit/meta_hooks/: check_hooks_apply.py  check_useless_excludes.py  identity.py
testing/: fixtures.py  make-archives  util.py
testing/zipapp/: entry  make  python
tests/: clientlib_test.py  color_test.py  config_test.py  conftest.py  envcontext_test.py  error_handler_test.py  git_test.py  logging_handler_test.py  main_test.py  output_test.py  parse_shebang_test.py  prefix_test.py  repository_test.py  staged_files_only_test.py  store_test.py  util_test.py  xargs_test.py
tests/commands/: autoupdate_test.py  clean_test.py  gc_test.py  hook_impl_test.py  init_templatedir_test.py  install_uninstall_test.py  migrate_config_test.py  run_test.py  sample_config_test.py  try_repo_test.py
tests/languages/: conda_test.py  docker_test.py  golang_test.py  helpers_test.py  node_test.py  pygrep_test.py  python_test.py  r_test.py  ruby_test.py
tests/meta_hooks/: check_hooks_apply_test.py  check_useless_excludes_test.py  (+1 more)
(+8 files in other folders)
